# beers

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
frontend/: package.json
frontend/src/: App.css  App.tsx
src/: settings.py  urls.py  wsgi.py
src/beer/: __init__.py  apps.py  test.py  urls.py  views.py
src/beer/axioma/: exceptions.py  repositories.py  utils.py  value_objects.py
src/beer/axioma/entities/: __init__.py  beer.py  friend.py  order.py
src/beer/capabilities/: add_order_item.py  calculate_total.py  process_payment.py
src/beer/integration/: serializers.py
src/beer/integration/repositories/: __init__.py  beer_repository_in_memory.py  friend_repository_in_memory.py  order_repository_in_memory.py
